--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "npx tsc -b && node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "start": "node dist/index.js"
+
   },
   "dependencies": {
     "@types/cors": "^2.8.19",
